--- a/web/Style.css
+++ b/web/Style.css
@@ -8,20 +8,16 @@ and open the template in the editor.
     Author     : foppe
 */
 
-#main
-{
+#main{
     color: black;
     background-color:white;
-    height: 100%;
-
+    height: 90%;
     text-align: left;
 }
-.hoofd
-{
+.hoofd{
     color: dimgrey;
 	margin: 10px;
     text-align: left;
-    top: 20px;
     position: relative;
 }
 
@@ -84,20 +80,21 @@ and open the template in the editor.
     top: 50%;
     left: 35%;
     height: 200px;
-	/*border: 1px solid black;*/
     width: 380px; 
-    /*background-image: url("https://pbs.twimg.com/profile_images/773125939232382976/oVjlik_4_400x400.jpg");*/
 }
-
 #avl2{
     margin-left: 35%;
     height: 200px;
-	/*border: 1px solid black;*/
     width: 380px; 
-    /*background-image: url("https://pbs.twimg.com/profile_images/773125939232382976/oVjlik_4_400x400.jpg");*/
 }
-
-.button {
+#avl3{
+    position: absolute;
+    height: 80px;
+    width: 152px; 
+	top: -15px;
+	left: 15px;
+}
+.button{
 
 	background-color: #af1c23;
     border: none;
@@ -127,11 +124,11 @@ and open the template in the editor.
     height: 100px;
 }
 
-.button:hover {
+.button:hover{
     background-color: red;
 }
 
-.buttonInlog {
+.buttonInlog{
 	background-color: #af1c23;
     border: none;
     color: white;
@@ -143,36 +140,106 @@ and open the template in the editor.
     cursor: pointer;
 }
 
-
-.buttonInlog:hover {
+.buttonInlog:hover{
     background-color: red;
 }
 
-p
-{
+p{
     margin: 5px;
-
 }
-
-#gegevens
-{
+body{
+	margin-left: 0px;
+	margin-right: 0px;
+}
+#gegevens{
    width: 98%;
    position:relative;
    background-color:white;
    height: 460px;
    top: 20px;
    border-radius: 7px;
-   /*border: 1px solid black;*/
+   border: 0px solid black;
    left: 1%;
+}
+#gegevens2{
+   width: 100%;
+   position: absolute;
+   background-color:#F5F5F5;
+   height: 550px;
+   top: 100px;
+   border: 0px solid gray;
+   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+#menu{
+	height: 100%;
+	width: 200px;
+	background-color: aliceblue;
+	position: absolute;
+}
+.menuKnop{
+	position: relative;
+	margin: auto;
+	width: 100%;
+	height: 24.8%;
+	border-top: 1px solid lightgray;
+	border-right: 1px solid lightgray;
+	background-color: white;
+	text-align: center
+}
+.menuKnopGekozen{
+	position: relative;
+	margin: auto;
+	width: 97.5%;
+	height: 24.8%;
+	border-top: 1px solid lightgray;
+	border-right: 1px solid lightgray;
+	background-color: white;
+	border-left: 5px solid red;
+	text-align: center
+}
+.menuKnop:hover{
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+	width: 102%;
+	border-left: 5px solid red;
+	transition-duration: 0.2s;
+}
+#derde{
+	top: 0px;
+}
+#tweede{
+	top: 0px;
+}
+#vierde{
+	top: 0px;
+	border-bottom: 1px solid lightgray;
+}
+#driehoek{
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 10px 0 10px 20px;
+	border-color: transparent transparent transparent #ff0000;
+}
+.boven{
+	padding-top: 32px;
+	font-family: sans-serif;
+	color: darkslategrey;
+}
+.gekozen{
+	padding-top: 32px;
+	font-family: sans-serif;
+	font-weight: bold;
+	color: darkslategrey;
+}
+a{
+	text-decoration: none;
 }
 
 table{
-	/*position: absolute;*/
 	left: 5%;
 	font-size: 17px;
 	font-family:verdana;
 }
-
 .inlog{
 	position: absolute;
 	left: 30%;
@@ -182,9 +249,7 @@ table{
 .p1{
 color: red;
 }
-
-h2
-{
+h2{
 	text-align: left;
 }
 h3{
@@ -193,10 +258,18 @@ h3{
 	right: 5px;
 	text-decoration: underline;
 }
-td{
+#titel{
+font-size: 20px;
+}
+#content{
 	position: relative;
-	
-	
+	width: 75%;
+	height: 550px;
+	left: 200px;
+	border: 0px solid black;
+}
+td{
+	position: relative;	
 }
 .Name{
 	width: 200px;
@@ -205,4 +278,25 @@ td{
 .tabelletje{
 	align-content: center;
 }
-
+.uitloggen{
+	background-color: #af1c23;
+    border: none;
+    color: white;
+	width: 100%;
+	height: 100%;
+	border-radius: 5px;
+    text-align: center;
+    font-size: 15px;
+    cursor: pointer;
+}
+.uitloggen:hover{
+    background-color: red;
+}
+#uitlog{
+	position: absolute;
+	top: 10%;
+	right: 0%;
+	border: 0px solid black;
+	width: 150px;
+	height: 30px;
+}
