--- a/web/Styless.css
+++ b/web/Styless.css
@@ -51,6 +51,14 @@ and open the template in the editor.
 	width: 6%;
 	height: 30px;
 }
+#knop5{
+	position: absolute;
+	top: 40%;
+	left: 20%;
+	border: 0px solid black;
+	width: 6%;
+	height: 30px;
+}
 #lijn{
 	margin: auto;
 	width: 740px;
@@ -236,7 +244,7 @@ a{
 }
 
 table{
-	left: 5%;
+	left: 20px;
 	font-size: 17px;
 	font-family:verdana;
 }
@@ -303,4 +311,8 @@ td{
 #verkeerd{
 	font-size: 12px;
 	color: red;
+}
+.data{
+	position: absolute;
+	font-size: 14px;
 }
