--- a/web/Styless.css
+++ b/web/Styless.css
@@ -275,7 +275,7 @@ font-size: 20px;
 	width: 75%;
 	height: 550px;
 	left: 200px;
-	border: 0px solid black;
+	padding-left: 20px; 
 }
 td{
 	position: relative;	
@@ -331,4 +331,29 @@ td{
         left: 20px;
 	height: 300px;
 	width: 1287px;
+}
+#plaatje{
+	position: absolute;
+	width: 150px;
+	height: 200px;
+	border: 1px solid black;
+}
+#Artsinfo{
+	position: absolute;
+	width: 1000px;
+	height: 200px;
+	left: 200px;
+	border: 1px solid black;
+}
+#biografie{
+	position: absolute;
+	width: 1000px;
+	height: 200px;
+	left: 200px;
+	top: 250px;
+	border: 1px solid black;
+}
+#bio{
+	width: 100%;
+	height: 100%;
 }
