--- a/web/Styless.css
+++ b/web/Styless.css
@@ -16,7 +16,7 @@ and open the template in the editor.
     font-family: "Arial", sans-serif;
 }
 .hoofd{
-    color: dimgrey;
+    /*    color: dimgrey;*/
     margin: 10px;
     text-align: left;
     position: relative;
@@ -45,9 +45,9 @@ and open the template in the editor.
     height: 75px;
 }
 #knop4{
-/*    position: absolute;
-    top: 370px;
-    left: 327px;*/
+    /*    position: absolute;
+        top: 370px;
+        left: 327px;*/
     border: 0px solid black;
     height: 30px;
 }
@@ -81,6 +81,20 @@ and open the template in the editor.
     margin: auto;
     width: 740px;
     border-top: 1px dashed grey;
+}
+.inlogKnop{
+    background: #D8D8D8;
+    border: 1px solid #979797;
+    border-radius: 8px;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+    width: 100px;
+    height: 60%;
+}
+.inlogKnop:hover{
+    background: #acacac;
 }
 
 .nr{
@@ -164,7 +178,7 @@ and open the template in the editor.
     background-color: #af1c23;
     border: none;
     color: white;
-/*    width: 100%;*/
+    /*    width: 100%;*/
     height: 100%;
     border-radius: 5px;
     text-align: center;
@@ -199,7 +213,8 @@ body{
     background-color:#F5F5F5;
     height: 550px;
     top: 100px;
-    border: 0px solid gray;
+    border-top: 1px solid lightgray;
+    /*    border: 0px solid gray;*/
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 #menu{
@@ -207,6 +222,16 @@ body{
     width: 200px;
     background-color: aliceblue;
     position: absolute;
+}
+.menuKnopLeeg{
+    position: relative;
+    margin: auto;
+    width: 100%;
+    height: 24.8%;
+    border-top: 1px solid lightgray;
+    border-right: 1px solid lightgray;
+    background-color: white;
+    text-align: center
 }
 .menuKnop{
     position: relative;
@@ -266,6 +291,9 @@ body{
 a{
     text-decoration: none;
 }
+#ondertitel{
+    font-size: 20px;
+}
 
 table{
     left: 20px;
@@ -285,9 +313,9 @@ h2{
     text-align: left;
 }
 h3{
-    position: absolute;
-    top: 5px;
-    right: 5px;
+    /*    position: absolute;
+        top: 5px;
+        right: 5px;*/
     text-decoration: underline;
 }
 #titel{
@@ -306,7 +334,8 @@ td{
 }
 .Name{
     width: 250px;
-    height: 20px;
+    height: 35px;
+    font-size: 20px;
 }
 .tabelletje{
     align-content: center;
@@ -361,19 +390,20 @@ td{
     width: 150px;
     height: 200px;
     border: 1px solid black;
+    background-image: url(pictures/Dokter.jpg);
+    background-size: cover;
 }
 #Artsinfo{
     position: absolute;
-    width: 1000px;
+    width: 80%;
     height: 200px;
     left: 200px;
-    border: 1px solid black;
+    border: 0px solid black;
 }
 #biografie{
     position: absolute;
-    width: 1000px;
+    width: 100%;
     height: 200px;
-    left: 200px;
     top: 250px;
 }
 #bio{
@@ -382,4 +412,26 @@ td{
 }
 #veld{
     width: 200px;
+}
+textarea { 
+    font-size: 18px; 
+    font-family: "Arial", sans-serif;
+}
+#rij{
+    height: 20px;
+}
+.pictogram{
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    width: 100px;
+    height: 100px;
+}
+#artsPicto{
+    background-image: url(pictures/dokter.png);
+    background-size: cover;
+}
+#patientPicto{
+    background-image: url(pictures/persoon.png);
+    background-size: cover;
 }
