--- a/web/Styless.css
+++ b/web/Styless.css
@@ -15,6 +15,10 @@ and open the template in the editor.
     text-align: left;
     font-family: "Arial", sans-serif;
 }
+.reden{
+    color: red;
+    font-size: 12px;
+}
 .hoofd{
     /*    color: dimgrey;*/
     margin: 10px;
@@ -358,7 +362,7 @@ h3{
 }
 #content{
     position: relative;
-    width: 75%;
+    width: 80%;
     height: 550px;
     left: 200px;
     padding-left: 20px; 
