--- a/web/Styless.css
+++ b/web/Styless.css
@@ -424,26 +424,55 @@ td{
     width: 1287px;
 }
 #plaatje{
-    position: absolute;
-    width: 150px;
+    /*position: absolute;*/
+    width: 300px;
     height: 200px;
     border: 1px solid black;
     background-image: url(pictures/Dokter.jpg);
     background-size: cover;
 }
+
+#plaatjeWijzig{
+    /*position: absolute;*/
+    width: 250px;
+    height: 250px;
+    border: 1px solid black;
+    background-image: url(pictures/Dokter.jpg);
+    background-size: cover;
+}
+
 #Artsinfo{
     position: absolute;
-    width: 80%;
-    height: 200px;
-    left: 200px;
+    /*width: 80%;*/
+    /*height: 200px;*/
+    /*left: 200px;*/
+    top: 210px;
     border: 0px solid black;
 }
+
+#ArtsinfoWijzig{
+    position: absolute;
+    /*width: 80%;*/
+    /*height: 200px;*/
+    left: 300px;
+    top: 30px;
+    border: 0px solid black;
+}
+
 #biografie{
     position: absolute;
-    width: 100%;
-    height: 200px;
-    top: 250px;
+    width: 300px;
+    height: 170px;
+    top: 310px;
 }
+
+#biografieWijzig{
+    position: absolute;
+    /*width: 300px;*/
+    height: 170px;
+    top: 310px;
+}
+
 #bio{
     width: 100%;
     height: 100%;
